// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timer connect functions for completed status should return props for the component 1`] = `
Object {
  "children": Array [],
  "killer$": ScalarObservable {
    "_isScalar": true,
    "scheduler": null,
    "value": 42,
  },
  "time$": EmptyObservable {
    "_isScalar": false,
    "scheduler": undefined,
  },
}
`;

exports[`Timer connect functions for started status should return props for the component 1`] = `
Object {
  "children": Array [],
  "killer$": EmptyObservable {
    "_isScalar": false,
    "scheduler": undefined,
  },
  "time$": IntervalObservable {
    "_isScalar": false,
    "period": 1000,
    "scheduler": AsyncScheduler {
      "SchedulerAction": [Function],
      "actions": Array [],
      "active": false,
      "now": [Function],
      "scheduled": undefined,
    },
  },
}
`;

exports[`Timer connect functions for starting status should return props for the component 1`] = `
Object {
  "children": Array [],
  "killer$": EmptyObservable {
    "_isScalar": false,
    "scheduler": undefined,
  },
  "time$": EmptyObservable {
    "_isScalar": false,
    "scheduler": undefined,
  },
}
`;
